--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rapier3d = { version = "0.16.1" }
+glam = { version = "0.21.3" }
+nalgebra = { version = "0.31.4", features = ["convert-glam021"] }
